# DSA_labs

./: .gitignore  README.md  desktop.ini
courses/course_01/: CMakeLists.txt
courses/course_01/adatszerkezet1_labor1/: CMakeLists.txt  main.c
courses/course_01/adatszerkezet1_labor1/headers/: functions.h
courses/course_01/adatszerkezet1_labor1/sources/: functions.c
courses/course_02/: CMakeLists.txt
courses/course_03/: CMakeLists.txt
courses/course_04/: CMakeLists.txt  main.c
courses/course_05/: CMakeLists.txt  main.c  stack.c  stack.h
courses/course_06/: CMakeLists.txt  main.c
courses/course_07/: CMakeLists.txt
courses/course_08/: CMakeLists.txt
courses/course_09/: CMakeLists.txt
courses/course_10/: CMakeLists.txt
courses/course_11/: CMakeLists.txt
courses/course_12/: CMakeLists.txt
courses/course_13/: CMakeLists.txt
courses/course_14/: CMakeLists.txt
extras/adatszerkezetek1_lab3/: main.c
extras/extra05/: CMakeLists.txt  main.c
extras/extra_02/: CMakeLists.txt
extras/extra_03/: CMakeLists.txt
extras/extra_04/: CMakeLists.txt
labs/: Strategia.txt
labs/Gyak2/: CMakeLists.txt  main.c
labs/lab_01/adatszerkezet1_labor1/: CMakeLists.txt  main.c
labs/lab_01/adatszerkezet1_labor1/sources/: functions.c
labs/lab_07/: CMakeLists.txt  input.txt  main.c
labs/lab_07/array/: functions.c  functions.h
labs/lab_07/circularqueue/: circularqueue.c  circularqueue.h
labs/lab_07/simplequeue/: simplequeue.c  simplequeue.h
labs/lab_07/stack/: stack.c  stack.h
labs/lab_12/: CMakeLists.txt  konyv.txt  main.c
labs/lab_12/headers/: binary_search_tree.h  book.h  contans.h  list.h
labs/lab_12/sources/: binary_search_tree.c  book.c  list.c
(+92 files in other folders)
